crates/rome_formatter/tests/specs/prettier/js/ternaries/nested-in-condition.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: nested-in-condition.js

---
# Input
```js
$var = ($number % 10 >= 2 && ($number % 100 < 10 || $number % 100 >= 20)
? kochabCooieGameOnOboleUnweave
: annularCooeedSplicesWalksWayWay)
  ? anodyneCondosMalateOverateRetinol
  : averredBathersBoxroomBuggyNurl;

const value = (bifornCringerMoshedPerplexSawder
? askTrovenaBeenaDependsRowans
: glimseGlyphsHazardNoopsTieTie)
  ? true
    ? true
    : false
  : true
  ? true
  : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
);

```

# Output
```js
$var =
  (
    ($number % 10) >= 2 && (($number % 100) < 10 || ($number % 100) >= 20) ? kochabCooieGameOnOboleUnweave : annularCooeedSplicesWalksWayWay
  ) ? anodyneCondosMalateOverateRetinol : averredBathersBoxroomBuggyNurl;

const value = (
  bifornCringerMoshedPerplexSawder ? askTrovenaBeenaDependsRowans : glimseGlyphsHazardNoopsTieTie
)
  ? true
    ? true
    : false
  : true
    ? true
    : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
);

```

# Errors
```
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
=======
>>>>>>> c87591329d (fixing rebase problems)
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:22:3
   │  
22 │ ┌   <Element>
23 │ │     <Sub />
   │ └───────────^ TypeScript only syntax
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> a23ec66cbf (abandoning jsx if no closing element is found)
error[SyntaxError]: expected `')'` but instead found `Sub`
   ┌─ nested-in-condition.js:23:6
   │
23 │     <Sub />
   │      ^^^ unexpected
<<<<<<< HEAD
=======
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
>>>>>>> a23ec66cbf (abandoning jsx if no closing element is found)
=======
>>>>>>> c87591329d (fixing rebase problems)

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:24:11
   │
24 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ nested-in-condition.js:25:5
   │  
25 │ ┌     <Sub />
26 │ │     <Sub />
   │ └─────^ JSX only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:26:11
   │
26 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ nested-in-condition.js:25:5
   │
25 │     <Sub />
   │     ^^^^^^^ JSX only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ nested-in-condition.js:26:11
   │
26 │     <Sub />
<<<<<<< HEAD
   │           ^ Expected an expression here
=======
=======
=======
error[SyntaxError]: jsx elements are a Jsx only feature. Convert your file to a Jsx file or remove the syntax.
=======
=======
>>>>>>> c87591329d (fixing rebase problems)
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ nested-in-condition.js:27:5
   │  
27 │ ┌     <Sub />
28 │ │     <Sub />
   │ └─────^ JSX only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:28:11
   │
28 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value
>>>>>>> ed0e4b6d04 (jsx in arrow functions and as statements)

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ nested-in-condition.js:27:5
   │
27 │     <Sub />
   │     ^^^^^^^ JSX only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ nested-in-condition.js:28:11
   │
28 │     <Sub />
<<<<<<< HEAD
   │           ^ Expected an expression here
=======
=======
=======
=======
>>>>>>> c87591329d (fixing rebase problems)
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:29:3
   │
29 │   </Element>
   │   ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:30:1
   │
30 │ ) : (
   │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:31:3
   │  
31 │ ┌   <Element2>
32 │ │     <Sub />
   │ └───────────^ TypeScript only syntax

<<<<<<< HEAD
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:33:11
   │
<<<<<<< HEAD
27 │     <Sub />
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
33 │     <Sub />
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value
>>>>>>> ed0e4b6d04 (jsx in arrow functions and as statements)

<<<<<<< HEAD
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:29:3
=======
error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
<<<<<<< HEAD
   ┌─ nested-in-condition.js:29:4
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
   ┌─ nested-in-condition.js:35:4
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
   │
<<<<<<< HEAD
29 │   </Element>
<<<<<<< HEAD
   │   ^^^^^^^^^ TypeScript only syntax
=======
=======
35 │   </Element2>
>>>>>>> a23ec66cbf (abandoning jsx if no closing element is found)
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value
>>>>>>> ed0e4b6d04 (jsx in arrow functions and as statements)

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:36:1
   │
36 │ );
   │ ^ Expected an expression here

<<<<<<< HEAD
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:31:3
   │  
31 │ ┌   <Element2>
32 │ │     <Sub />
   │ └───────────^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
=======
error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
>>>>>>> c87591329d (fixing rebase problems)
   ┌─ nested-in-condition.js:33:11
   │
33 │     <Sub />
   │           ^ Expected an expression here

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ nested-in-condition.js:34:5
<<<<<<< HEAD
   │
34 │     <Sub />
   │     ^^^^^^^ JSX only syntax
=======
   │  
34 │ ┌     <Sub />
35 │ │   </Element2>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
   │ └───^ JSX only syntax
=======
   │ └───^ Jsx only syntax
>>>>>>> 844f141c04 (jsx parser enabled by language variant)
<<<<<<< HEAD
>>>>>>> 1ab4ecffde (jsx parser enabled by language variant)
=======
=======
   │ └───^ JSX only syntax
>>>>>>> 1273bfcd13 (jsx is now uppercase)
>>>>>>> 5fae734162 (jsx is now uppercase)
=======
   │ └───^ JSX only syntax
>>>>>>> c87591329d (fixing rebase problems)

error: unterminated regex literal
   ┌─ nested-in-condition.js:35:14
   │
35 │   </Element2>
   │    -         ^ ...but the line ends here
   │    │         
   │    a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:36:1
   │
36 │ );
   │ ^ Expected an expression here


```


